<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">一叶日记</string>
    <string name="action_add">日记</string>
    <string name="action_palette">画板</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">一叶日记</string>
    <string name="title_activity_diary_edit">日记</string>
    <string name="edit_title">输入标题</string>
    <string name="edit_text">输入正文</string>
    <string name="share_diary">分享</string>
    <string name="delete_diary">删除</string>
    <string name="delete_diary_reconfirm">确定要删除该日记吗？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_activity_diary_settings">设置</string>
    <string name="title_activity_palette">画板</string>
    <string name="clear_palette_reconfirm">确定要清屏吗？</string>
    <string name="title_activity_gallery">画廊</string>
    <string name="no_painting_tip">您的画廊中还没有绘画</string>
    <string name="title_activity_gallery_view">画廊</string>
    <string name="delete_painting_reconfirm">确定要删除绘画吗？</string>
    <string name="title_activity_login">一叶日记</string>
    <string name="title_activity_set_password">设置密码</string>
    <string name="set_password_success">设置成功</string>
    <string name="set_password_fail">两次输入的密码不一致</string>
    <string name="default_diary_title">欢迎使用一叶日记</string>
    <string name="default_diary_content">一叶日记是一款轻量级的日记软件，同时具备强大的画板功能，帮助您随时随地写写画画。</string>
    <string name="sd_read_warning">没有找到可用的SD卡，无法读取绘画</string>
    <string name="sd_write_warning">没有找到可用的SD卡，无法保存绘画</string>
    <string name="retry_password">密码错误，请重试</string>
    <string name="diary_title">绘画</string>
    <string name="security">安全</string>
    <string name="help">帮助</string>
    <string name="support">支持</string>
    <string name="version">当前版本</string>
    <string name="password_tip">启用密码登录，请牢记密码。</string>
    <string name="diary_desc">您可以创建文字日记或绘画日记；画板既可以画画，也可作为手写功能书写文字。</string>
    <string name="qq">QQ:215514058</string>
    <string name="version_text">1.0.0</string>
    <string name="set_pen_size">设置画笔大小</string>
    <string name="click_to_enjoy">点击欣赏</string>
    <string name="chose_color">选择颜色</string>
    <string name="first_page_tip">已是第一页</string>
    <string name="last_page_tip">已是最后一页</string>
    <string name="set_password_tip">清空密码即两次输入均为空</string>
    <string name="input_password">输入密码：</string>
    <string name="confirm_password">确认密码：</string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="gallery">画廊</string>
    <string name="show_or_hide_painting_tools">显示/隐藏绘画工具栏</string>
    
</resources>
